
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int s ;


 int l (int *,int,unsigned char) ;

__attribute__((used)) static void l176(
s*b,unsigned char r,unsigned char l27){int c;l(b,40,l27);{c=0;l553:if
(!(c<8))goto l549;goto l547;l552:++c;goto l553;l547:{{if(!((r>>c)&1))goto
l544;{l(b,40,l27|4);l(b,40,l27|4);l(b,40,l27|4);l(b,40,l27|4);l(b,40,
l27|4|8);l(b,40,l27|4|8);l(b,40,l27|4|8);l(b,40,l27|4|8);}goto l541;
l544:;{l(b,40,l27);l(b,40,l27);l(b,40,l27);l(b,40,l27);l(b,40,l27|8);
l(b,40,l27|8);l(b,40,l27|8);l(b,40,l27|8);}l541:;}}goto l552;l549:;}l
(b,40,l27);}
